# anibridge-provider-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/anibridge_example_provider/: __init__.py  example_library.py  example_list.py
tests/: conftest.py  test_example_library.py  test_example_list.py
